          ----------------------------------------------

This file should be used to summarize modifications introduced in the 
code and to keep track of all tags.

     ---------------------------------------------------------------
     * Please list in reverse chronological order (last date on top)
     ---------------------------------------------------------------

03 Nov 2014 Vladimir Ivanchenko (hadr-deex-V10-00-18)
----------------------------------------------------------
- Fixed build problem 

03 Nov 2014 Vladimir Ivanchenko (hadr-deex-V10-00-17)
----------------------------------------------------------
- Cleanup and redesign of photon evaporation

31 Oct 2014 Vladimir Ivanchenko (hadr-deex-V10-00-16)
----------------------------------------------------------
- Improved design of FermiBreakUp and fix decays of "unstable" Fermi
    fragments

29 Oct 2014 Vladimir Ivanchenko (hadr-deex-V10-00-15)
----------------------------------------------------------
- G4FermiBreakUp, G4FermiFragmentsPool, G4VEvaporation, 
  G4ExcitationHandler, G4Evaporation, G4EvaporationChannel, G4GEMChannel, 
  G4UnstableFragmentBreakUp, G4VEvaporationChannel
    further reduced memory churn

27 Oct 2014 Vladimir Ivanchenko (hadr-deex-V10-00-14)
----------------------------------------------------------
- G4FermiFragmentsPool - added method IfApplicable() for fast check
    if FermiBreakUp is applicable to a given excited fragment
- G4EvaporationChannel, G4Evaporation, G4GEMChannel, G4GEMProbability,
  G4VEvaporationChannel,  G4ExcitationHandler - optimized code 
    reducing number of new/delete of intermediate objects, for that
    slightly modified interface to evaporation channel; cleanup
    logic and implementation

26 Oct 2014 Vladimir Ivanchenko (hadr-deex-V10-00-13)
----------------------------------------------------------
- G4ExcitationHandler - fixed problem in isomere production providing
    energy non-concervation on level of 1 MeV
