@@ -14,6 +14,12 @@ code and to keep track of all tags.
      * Please list in reverse chronological order (last date on top)
      ---------------------------------------------------------------
 
+07 Nov 2014 Vladimir Ivanchenko (hadr-deex-V10-00-19)
+----------------------------------------------------------
+- removed obsolete G4FermiConfigurationList
+- G4ContinuumGammaTransition, G4E1Probability - fixed probability 
+    computation (J.M.Quesada)
+
 03 Nov 2014 Vladimir Ivanchenko (hadr-deex-V10-00-18)
 ----------------------------------------------------------
 - Fixed build problem 
